Fix images overflowing the swiper-zoom-container's height

--- a/css/slider.css
+++ b/css/slider.css
@@ -15,6 +15,10 @@
     display: block;
 }
 
+.swiper-zoom-container > * {
+    max-height: 100%;
+}
+
 @media (orientation: landscape) {
     .swiper-container {
         left: var(--panel-size);
